add: hash fingerprint to all static files

--- a/web/templates/layouts/base.tmpl.html
+++ b/web/templates/layouts/base.tmpl.html
@@ -5,14 +5,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{{.title}}</title>
-	<link rel="stylesheet" href="/static/css/main.css">
+	<link rel="stylesheet" href="{{ asset "/static/css/main.css" }}">
 </head>
 <body>
 	{{template "navbar" .}}
 	<main class="container">
 		{{block "content" .}}{{end}}
 	</main>
-	<script src="/static/js/app.js"></script>
+	<script src="{{ asset "/static/js/app.js" }}"></script>
 </body>
 </html>
 {{end}}
