new tables: brands and shapes

--- a/web/templates/pages/guitars.tmpl.html
+++ b/web/templates/pages/guitars.tmpl.html
@@ -17,10 +17,10 @@
     <tbody>
       {{ range .guitars }}
       <tr>
-        <td>{{ .Brand }}</td>
+        <td>{{ .BrandName }}</td>
         <td>{{ .Model }}</td>
         <td>{{ .Type }}</td>
-        <td>{{ .Shape }}</td>
+        <td>{{ .ShapeName }}</td>
         <td>{{ .Slug }}</td>
       </tr>
       {{ end }}
