--- a/web/templates/pages/guitar.tmpl.html
+++ b/web/templates/pages/guitar.tmpl.html
@@ -104,15 +104,15 @@
                     </span>
                   {{ end }}
                 </div>
-                {{ if or .ValueText .ValueNumber .ValueBoolean .EnumValue }}
-                <button 
-                  onclick="guitarSpecs.toggleFeatureDetails('{{ .FeatureKey }}')"
-                  class="text-gray-400 hover:text-gray-600 transition-colors duration-200">
-                  <svg class="h-5 w-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-                  </svg>
-                </button>
-                {{ end }}
+                                            {{ if or .ValueText .ValueNumber .ValueBoolean .EnumValue }}
+                            <button
+                              onclick="toggleFeatureDetails('{{ .FeatureKey }}')"
+                              class="text-gray-400 hover:text-gray-600 transition-colors duration-200">
+                              <svg class="h-5 w-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+                              </svg>
+                            </button>
+                            {{ end }}
               </div>
               
               <!-- Expandable Details -->
