--- a/web/templates/layouts/navbar.tmpl.html
+++ b/web/templates/layouts/navbar.tmpl.html
@@ -3,7 +3,7 @@
 	<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 		<div class="flex justify-between h-16">
 			<div class="flex">
-				<div class="flex-shrink-0 flex items-center">
+				<div class="shrink-0 flex items-center">
 					<a href="/" class="text-xl font-bold transition-colors duration-200" style="color: var(--primary);">
 						Guitar Specs
 					</a>
