--- a/web/templates/layouts/base.tmpl.html
+++ b/web/templates/layouts/base.tmpl.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{{.title}}</title>
-	<link rel="stylesheet" href="{{ asset "/static/dist/css/style.css" }}">
+	<link rel="stylesheet" href="{{ asset "/static/dist/css/style.css" }}" integrity="{{ sri "/static/dist/css/style.css" }}" crossorigin="anonymous">
 </head>
 <body class="h-full">
 	{{template "navbar" .}}
@@ -13,9 +13,9 @@
 		{{block "content" .}}{{end}}
 	</main>
 	            	{{ if .cspNonce }}
-            	<script nonce="{{ .cspNonce }}" type="module" src="{{ asset "/static/dist/js/main.js" }}"></script>
+            	<script nonce="{{ .cspNonce }}" type="module" src="{{ asset "/static/dist/js/main.js" }}" integrity="{{ sri "/static/dist/js/main.js" }}" crossorigin="anonymous"></script>
             	{{ else }}
-            	<script type="module" src="{{ asset "/static/dist/js/main.js" }}"></script>
+            	<script type="module" src="{{ asset "/static/dist/js/main.js" }}" integrity="{{ sri "/static/dist/js/main.js" }}" crossorigin="anonymous"></script>
             	{{ end }}
 </body>
 </html>
