--- a/web/templates/layouts/base.tmpl.html
+++ b/web/templates/layouts/base.tmpl.html
@@ -5,6 +5,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{{.title}}</title>
+	
+	<!-- Preload critical assets -->
+	<link rel="preload" href="{{ asset "/static/dist/css/style.css" }}" as="style" integrity="{{ sri "/static/dist/css/style.css" }}" crossorigin="anonymous">
+	<link rel="preload" href="{{ asset "/static/dist/js/main.js" }}" as="script" integrity="{{ sri "/static/dist/js/main.js" }}" crossorigin="anonymous">
+	
+	<!-- Stylesheet -->
 	<link rel="stylesheet" href="{{ asset "/static/dist/css/style.css" }}" integrity="{{ sri "/static/dist/css/style.css" }}" crossorigin="anonymous">
 </head>
 <body class="h-full">
